--- a/index.html
+++ b/index.html
@@ -1,1 +1,54 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Status Page</title>
+  <!-- Bootstrap CSS -->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
+</head>
+<body>
 
+<div class="container mt-5">
+  <div class="row">
+    <div class="col-md-6 offset-md-3">
+      <div class="card text-center">
+        <div class="card-header status-header">
+          Status Page
+        </div>
+        <div class="card-body">
+          <h5 class="card-title">System Status</h5>
+          <p class="card-text">All systems are operational.</p>
+        </div>
+        <div class="card-footer text-muted">
+          Last updated: April 22, 2024
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
+
+<!-- Bootstrap JS -->
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
+
+<script>
+  // JavaScript to set different color banners based on status
+  var status = "operational"; // Change this variable based on your actual status
+
+  // Function to update banner color based on status
+  function updateBannerColor() {
+    var header = document.querySelector('.status-header');
+    if (status === "operational") {
+      header.classList.add('bg-success', 'text-white');
+    } else if (status === "maintenance") {
+      header.classList.add('bg-warning', 'text-dark');
+    } else if (status === "down") {
+      header.classList.add('bg-danger', 'text-white');
+    }
+  }
+
+  // Call the function to set the initial banner color
+  updateBannerColor();
+</script>
+</body>
+</html>
