--- a/index.html
+++ b/index.html
@@ -14,7 +14,11 @@
     <div class="col-md-6 offset-md-3">
       <div class="card text-center">
         <div class="card-header status-header">
-          Status Page
+          <a href="#" class="text-decoration-none text-dark">Grand Challenge Status Page</a>
+          <div class="float-end">
+            <a href="https://grand-challenge.org/" class="btn btn-outline-primary btn-sm mx-1">Grand Challenge Home</a>
+            <a href="https://grand-challenge.org/support/" class="btn btn-outline-primary btn-sm mx-1">Support and Documentation</a>
+          </div>
         </div>
         <div class="card-body">
           <h5 class="card-title">System Status</h5>
