--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         </div>
         <div class="card-body">
           <h5 class="card-title">System Status</h5>
-          <p class="card-text">All systems are operational.</p>
+          <p class="card-text">All systems are operational :) .</p>
         </div>
         <div class="card-footer text-muted">
           Last updated: April 22, 2024
